src/objects/BMCServiceDesk__Normalization_Metadata__c.object
<CustomObject>
    <description>Stores the metadata about normalization rules, such as the object name and field name on which rules are defined.</description>
    <fields>
        <fullName>BMCServiceDesk__Approval_Method__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Generate Exceptions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approved_Count__c</fullName>
        <label>Approved Count</label>
        <summaryFilterItems>
            <field>BMCServiceDesk__Normalization_Transaction_Master__c.BMCServiceDesk__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>BMCServiceDesk__Normalization_Transaction_Master__c.BMCServiceDesk__FKNormalization_Metadata__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Pending_Count__c</fullName>
        <label>Pending Count</label>
        <summaryFilterItems>
            <field>BMCServiceDesk__Normalization_Transaction_Master__c.BMCServiceDesk__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>BMCServiceDesk__Normalization_Transaction_Master__c.BMCServiceDesk__FKNormalization_Metadata__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Normalization Metadata</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Metadata-{00000}</displayFormat>
        <label>Normalization Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Metadatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>